deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: oip-hasura-dev
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: oip-hasura-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oip-hasura-dev
spec:
  selector:
    matchLabels:
      app: oip-hasura-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: oip-hasura-dev
    spec:
      containers:
      - name: oip-hasura-dev
        image: hasura/graphql-engine:v1.0.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: oip-postgres-dev
spec:
  ports:
  - port: 80
    targetPort: 5432
  selector:
    app: oip-postgres-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oip-postgres-dev
spec:
  selector:
    matchLabels:
      app: oip-postgres-dev
  replicas: 1
  template:
    metadata:
      labels:
        app: oip-postgres-dev
    spec:
      volumes:
      - name: db-volume
        persistentVolumeClaim:
          claimName: db-pvc
      containers:
      - name: oip-postgres-dev
        image: postgres:11
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: "/var/lib/postgresql"
          name: db-volume
