ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: oip-hasura-dev-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - oip-hasura-dev.k8s.jaagalabs.com
    secretName: oip-hasura-dev-tls
  rules:  
  - host: oip-hasura-dev.k8s.jaagalabs.com
    http:
      paths:
      - backend:
          serviceName: oip-hasura-dev
          servicePort: 80
  - host: oip-postgres-dev.k8s.jaagalabs.com
    http:
      paths:
      - backend:
          serviceName: oip-postgres-dev
          servicePort: 80
